Core/bindings/swift/wooosh_coreFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
typedef struct ForeignBytes
{
    int32_t len;
    const uint8_t *_Nullable data;
} ForeignBytes;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
typedef struct UniffiVTableCallbackInterfaceCoreEventListener {
    UniffiCallbackInterfaceCoreEventListenerMethod0 _Nonnull onEvent;
    UniffiCallbackInterfaceFree _Nonnull uniffiFree;
} UniffiVTableCallbackInterfaceCoreEventListener;
typedef struct UniffiVTableCallbackInterfaceKeyStore {
    UniffiCallbackInterfaceKeyStoreMethod0 _Nonnull loadIdentity;
    UniffiCallbackInterfaceKeyStoreMethod1 _Nonnull storeIdentity;
    UniffiCallbackInterfaceFree _Nonnull uniffiFree;
} UniffiVTableCallbackInterfaceKeyStore;
void uniffi_wooosh_core_fn_init_callback_vtable_coreeventlistener(const UniffiVTableCallbackInterfaceCoreEventListener* _Nonnull vtable
);
void*_Nonnull uniffi_wooosh_core_fn_constructor_filekeystore_new(RustBuffer path, RustCallStatus *_Nonnull out_status
);
void uniffi_wooosh_core_fn_init_callback_vtable_keystore(const UniffiVTableCallbackInterfaceKeyStore* _Nonnull vtable
);
void*_Nonnull uniffi_wooosh_core_fn_clone_woooshcore(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_wooosh_core_fn_free_woooshcore(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_wooosh_core_fn_constructor_woooshcore_new(RustCallStatus *_Nonnull out_status
    
);
RustBuffer uniffi_wooosh_core_fn_method_woooshcore_begin_pairing_qr(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_wooosh_core_fn_method_woooshcore_cancel(void*_Nonnull ptr, RustBuffer transfer_id, RustBuffer file_id, RustCallStatus *_Nonnull out_status
);
void uniffi_wooosh_core_fn_method_woooshcore_confirm_sas(void*_Nonnull ptr, RustBuffer peer_id, int8_t accepted, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_wooosh_core_fn_method_woooshcore_connect_peer(void*_Nonnull ptr, RustBuffer addr, RustBuffer expected_pubkey, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_wooosh_core_fn_method_woooshcore_device_id(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_wooosh_core_fn_method_woooshcore_fingerprint_phrase(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_wooosh_core_fn_method_woooshcore_listen_addr(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_wooosh_core_fn_method_woooshcore_pair_with_qr(void*_Nonnull ptr, RustBuffer payload, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_wooosh_core_fn_method_woooshcore_public_key(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_wooosh_core_fn_method_woooshcore_request_sas_pairing(void*_Nonnull ptr, RustBuffer peer_id, RustCallStatus *_Nonnull out_status
);
void uniffi_wooosh_core_fn_method_woooshcore_respond_to_offer(void*_Nonnull ptr, RustBuffer transfer_id, RustBuffer accepted_file_ids, RustCallStatus *_Nonnull out_status
);
void uniffi_wooosh_core_fn_method_woooshcore_resume_transfer(void*_Nonnull ptr, RustBuffer peer_id, RustBuffer transfer_id, RustCallStatus *_Nonnull out_status
);
int8_t uniffi_wooosh_core_fn_method_woooshcore_revoke_peer(void*_Nonnull ptr, RustBuffer pubkey, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_wooosh_core_fn_method_woooshcore_send(void*_Nonnull ptr, RustBuffer peer_id, RustBuffer files, RustCallStatus *_Nonnull out_status
);
void uniffi_wooosh_core_fn_method_woooshcore_set_visibility(void*_Nonnull ptr, RustBuffer mode, RustCallStatus *_Nonnull out_status
);
void uniffi_wooosh_core_fn_method_woooshcore_start(void*_Nonnull ptr, RustBuffer config, void*_Nonnull key_store, void*_Nonnull listener, RustCallStatus *_Nonnull out_status
);
void uniffi_wooosh_core_fn_method_woooshcore_stop(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_wooosh_core_fn_method_woooshcore_trusted_peers(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_wooosh_core_fn_func_device_id_for(RustBuffer pubkey, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_wooosh_core_fn_func_fingerprint_phrase_for(RustBuffer pubkey, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_wooosh_core_fn_func_parse_pairing_qr(RustBuffer payload, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_wooosh_core_rustbuffer_alloc(uint64_t size, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_wooosh_core_rustbuffer_from_bytes(ForeignBytes bytes, RustCallStatus *_Nonnull out_status
);
void ffi_wooosh_core_rustbuffer_free(RustBuffer buf, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_wooosh_core_rustbuffer_reserve(RustBuffer buf, uint64_t additional, RustCallStatus *_Nonnull out_status
);
uint32_t ffi_wooosh_core_uniffi_contract_version(void
    
);